# procurement-decision-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/procurement_decision_api/: __init__.py  __main__.py  app.py  audit_stream.py  drafter.py  fetcher.py  models.py  rubric.py
tests/: test_app.py  test_audit_stream.py  test_models.py  test_rubric.py
